# Starbot_Delivery

./: README.md
hole_detection_real_yolo/: package.xml  setup.cfg  setup.py
hole_detection_real_yolo/data/hole_detection_real.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
hole_detection_real_yolo/data/hole_detection_real.v1i.yolov8/test/labels/: Screenshot-2024-11-26-164124_png.rf.f6452edae7eab631e2cfcabe92c1b5dd.txt  Screenshot-2024-11-26-164755_png.rf.867b8b912a2fde3d81ec80e65e43bde1.txt  Screenshot-2024-11-26-164919_png.rf.4a78e48a00326db3b88d000c9724c12a.txt
hole_detection_real_yolo/data/hole_detection_real.v1i.yolov8/train/: labels.cache
hole_detection_real_yolo/data/hole_detection_real.v1i.yolov8/train/labels/: Screenshot-2024-11-25-214211_png.rf.02260999d19bd83f6d034995e530fb64.txt  Screenshot-2024-11-26-113930_png.rf.930af8bfe6485a350ec319e0892d00f2.txt  Screenshot-2024-11-26-114006_png.rf.0801a6861e005225b276583240345bed.txt  Screenshot-2024-11-26-164033_png.rf.3efca8a4ef36e9f085ddbb07cd5076f0.txt  Screenshot-2024-11-26-164051_png.rf.caa85f6d67847884dc9e593727152b76.txt  Screenshot-2024-11-26-164108_png.rf.79fa96d709284dcca19407baf598e449.txt  Screenshot-2024-11-26-164225_png.rf.8b7fe0e60e01f6b4e0702bac76f9ee2d.txt  Screenshot-2024-11-26-164252_png.rf.2525300c7bd60fbcd96e6b1463aa8c96.txt  Screenshot-2024-11-26-164312_png.rf.360ebf8d8502d7d1c1ca6ea29c8e675c.txt  Screenshot-2024-11-26-164355_png.rf.b4eef56d1f1f62d8cb215c47431909ed.txt  Screenshot-2024-11-26-164417_png.rf.409963cd50ef231fd7057348313cce90.txt  Screenshot-2024-11-26-164440_png.rf.9d2e9ecb305a78206f3a0e3cbbea8a0f.txt  (+9 more)
hole_detection_real_yolo/data/hole_detection_real.v1i.yolov8/valid/: labels.cache
hole_detection_real_yolo/hole_detection_real_yolo/: hole_detector_real_node.py
hole_detection_real_yolo/hole_detection_real_yolo/scripts/: train_yolo.py
hole_detection_real_yolo/launch/: hole_detector_real.launch.py
hole_detection_yolo/: package.xml  setup.cfg  setup.py
hole_detection_yolo/data/hole_detection.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
hole_detection_yolo/data/hole_detection.v1i.yolov8/train/: labels.cache
hole_detection_yolo/data/hole_detection.v1i.yolov8/valid/: labels.cache
hole_detection_yolo/hole_detection_yolo/: hole_detector_node.py
hole_detection_yolo/hole_detection_yolo/scripts/: train_yolo.py
hole_detection_yolo/launch/: hole_detector.launch.py
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: name.srdf
robot_trajectory_manipulation/: CMakeLists.txt  package.xml
robot_trajectory_manipulation/launch/: coffee_order_handler.launch.py  coffee_order_handler_real.launch.py  cup_take.launch.py  hole_placement_1.launch.py  hole_placement_2.launch.py  hole_placement_3.launch.py  hole_placement_4.launch.py  hole_placement_real_1.launch.py  hole_placement_real_2.launch.py  hole_placement_real_3.launch.py  hole_placement_real_4.launch.py  planning_scene.launch.py  planning_scene_real.launch.py
robot_trajectory_manipulation/src/: coffee_order_handler.cpp  coffee_order_handler_real.cpp  cup_take.cpp  hole_placement_1.cpp  hole_placement_2.cpp  hole_placement_3.cpp  hole_placement_4.cpp  hole_placement_real_1.cpp  hole_placement_real_2.cpp  hole_placement_real_3.cpp  hole_placement_real_4.cpp  planning_scene.cpp  planning_scene_real.cpp
sim_moveit_config/: .setup_assistant  package.xml
sim_moveit_config/config/: name.srdf
sim_moveit_config/launch/: move_group.launch.py
universal_robot_ros2/rg2_gripper_description/urdf/: rg2_gripper.urdf.xacro
universal_robot_ros2/the_construct_office_gazebo/models/portable_cup_2/: model.sdf
ur3e_helper_scripts/: README.txt
ur3e_helper_scripts/launch/: move_to_blocks.launch.py  setup_grasp_object.launch.py
ur3e_helper_scripts/src/: setup_grasp_object.cpp
webapp/: index.html  main.js  styles.css
(+36 files in other folders)
